# Electron-ELT

./: .gitignore  Electron-ELT-0.15.2-update.md  Electron-ELT-0.15.21.md  Electron-qt.pro  Makefile.am  QC-Electron-ELT.md  README.md  build.sh  configure  configure.ac  configure.lineno  libbitcoinconsensus.pc  libtool  mainnet-carryback-audit-2026-04-18.md
contrib/devtools/: gen-electron-conf.sh  gen-manpages.py  security-check.py  symbol-check.py  utxo_snapshot.sh
contrib/init/: electrond.conf  electrond.init  electrond.openrc  electrond.openrcconf  electrond.service  org.bitcoin.bitcoind.plist  org.electron.electrond.plist
contrib/linearize/: README.md  (+2 more)
doc/: Doxyfile.in  README_windows.txt  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  init.md  release-notes.md
doc/man/: Makefile.am  electron-cli.1  electron-qt.1  electron-tx.1  electron-util.1  electron-wallet.1  electrond.1
electrum/: coin.env
share/: setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  amount.h  base58.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  checkpoints.cpp  clientversion.cpp  hash.h  init.cpp  key.cpp  main.cpp  main.h  makefile.unix  miner.cpp  net.cpp  net.h  noui.h  pow.cpp  protocol.h  rpcwallet.cpp  util.cpp  util.h  validation.cpp  (+2 more)
test/: config.ini
(+284 files in other folders)
